@@ -35,6 +35,8 @@ Storage System:
 View Server:
 
  * Speedup in the communication with external view servers.
+ * Additional response headers may be varied prior to send().
+ * GetRow() is now side-effect free.
 
 Futon:
 
